<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#ffff"
    android:padding="40dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivand1"
        android:layout_width="380dp"
        android:layout_height="203dp"
        android:layout_gravity="center"
        android:src="@drawable/logoand1" />

    <!-- Username-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/met1"
        app:startIconDrawable="@drawable/ic_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/username"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- E-mail-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/met2"
        app:startIconDrawable="@drawable/ic_email"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/met3"
        app:startIconDrawable="@drawable/ic_password"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Confirm Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/met5"
        app:startIconDrawable="@drawable/ic_retype"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/retype_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Enter Mobile-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/met4"
        app:startIconDrawable="@drawable/ic_phone_android"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        >
        <RadioButton
            android:text="@string/male"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:text="@string/female"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>


    <Button
        android:text="@string/register"
        android:backgroundTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>